Update version to 1.0.1